--- a/README
+++ b/README
@@ -32,8 +32,7 @@ directory we will call JAVARI_ANNOTATION_WORKSPACE:
 BUILDING
 ========
 
-You can build the Javarifier by executing its specific build file, which
-builds all projects it depends on:
+These commands build Javarifier (after building all projects it depends on):
 
         cd javarifier
         ant bin
@@ -54,11 +53,11 @@ The Javarifier depends on several other packages.  In short, if you have
 the 4 packages noted above checked out in the same directory, everything
 should already be setup.
 
-These dependencies are
-automatically taken care of by the build.xml script.  For convenience, we list
-here all the projects the Javarifier depends on in order to facilitate 
-integration with Eclipse.  Note that if you add a project dependency in 
-Eclipse, you must add it to the build.xml script in the "libpath" property.
+These dependencies are automatically taken care of by the build.xml script.
+For convenience, we list here all the projects the Javarifier depends on in
+order to facilitate integration with Eclipse.  Note that if you add a
+project dependency in Eclipse, you must add it to the build.xml script in
+the "libpath" property.
 
 Projects to build Javarifier:
 
@@ -80,8 +79,7 @@ CREATING A DISTRIBUTION
 =======================
 
 To make a Javarifier distribution:
- 1. Run 'ant zipfile' to build javarifier.zip, and to ensure that
-    everything is OK.
+ 1. Run 'ant zipfile' to ensure that you can build javarifier.zip.
  2. Manually verify that the release notes at the end of javarifier.html
     are up-to-date.
  3. Synchronize the version number in javarifier.html to the version number
@@ -99,10 +97,10 @@ or on the web at:
 
 If you want to run Javarifier using all the local class files, you can
 run Javarifier using the javarifier script at:
-   javari/javarifier/javarifier
+   javarifier/scripts/javarifier
 
-Make sure that this script is executable on your system by making sure
-javarifier is on your $PATH.
+Make sure that this script is executable, and that the scripts directory is
+on your $PATH.
 
 To use this script, pass in the fully-qualified name of all 
 classes to javarify, as in:
@@ -141,7 +139,7 @@ User documentation for the Javarifier tool can be found at:
 Or on the web at: 
         http://types.cs.washington.edu/javarifier
 
-Slides from talks on Javarifier can be found in the doc/ directory.
+Slides from talks on Javarifier can be found in the talks/ directory.
 
 
 IMPLEMENTATION NOTES
