--- a/README
+++ b/README
@@ -29,12 +29,41 @@ directory we will call JAVARI_ANNOTATION_WORKSPACE:
   hg clone https://javarifier.googlecode.com/hg javarifier
 
 
+BUILDING DEPENDENCIES
+=====================
+
+First, ensure that your JAVA_HOME environment variable is set.  Under unix:
+
+        echo $JAVA_HOME
+
+If this isn't something reasonable like "/usr/lib/jvm/java-6-openjdk", then
+set it to your java home directory:
+
+	export JAVA_HOME="/usr/lib/jvm/java-6-openjdk"
+
+In order to properly run tests, and execute some tools, and utilize the
+checker framework, it is necessary that you also have the following
+environment variables set:
+        
+        export CHECKERS=$JAVARI_ANNOTATION_WORKSPACE/checker-framework/checkers
+	export PATH=$CHECKERS/binary:$PATH
+
+Next, build each of the above projects in the order they were referenced above:
+
+        cd jsr308-langtools/make
+        ant
+        cd ../../annotation-tools
+        ant
+        cd ../checker-framework/checkers
+        ant
+
+If any of these builds fail, consult that project's README file.
+
 BUILDING
 ========
 
-[This is not correct, the other targets have to be built first.]
-
-These commands build Javarifier (after building all projects it depends on):
+After obtaining and building the dependencies, simply performing the
+following will build javarifier:
 
         cd javarifier
         ant bin
