--- a/README
+++ b/README
@@ -71,21 +71,24 @@ To make a Javarifier distribution:
     are up-to-date.
  3. Synchronize the version number in javarifier.html to the version number
     in javarifier.Main.versionString (in src/javarifier/Main.java).
- 4. Run 'ant web'.  This copies the distribution (javarifier.zip) and the
+ 4. Run 'ant -e web'.  This copies the distribution (javarifier.zip) and the
     user documentation to http://types.cs.washington.edu/javarifier .
  5. Test it.  From a brand-new account, run the following:
+
       ## Install Checker Framework
       # Cut and paste from
       # http://types.cs.washington.edu/checker-framework/#javac-installation
-      # (but maybe use a different checkers.zip URL, such as:
-      ##  wget http://www.cs.washington.edu/homes/mernst/jsr308test/checker-framework/current/checkers.zip
+      # (but maybe use a different checkers.zip URL, such as one of:
+      #   wget http://www.cs.washington.edu/homes/mernst/jsr308test/checker-framework/current/checkers.zip
       #   cp -pf /home/cf/jsr308/checker-framework/tmp/1.1.1/checkers.zip .
+
       ## Install Annotation File Utilities
       cd ~/jsr308
-      # For released version: wget http://types.cs.washington.edu/annotation-file-utilities/annotation-tools.zip
-      cp -pf ~cf/jsr308/annotation-tools/annotation-file-utilities/annotation-tools.zip .
+      # For unreleased version: cp -pf ~cf/jsr308/annotation-tools/annotation-file-utilities/annotation-tools.zip .
+      wget http://types.cs.washington.edu/annotation-file-utilities/annotation-tools.zip
       rm -rf annotation-tools
       unzip annotation-tools.zip
+
       ## Install Javarifier
       cd ~/jsr308
       # After release: http://types.cs.washington.edu/javarifier/javarifier.zip
