--- a/README
+++ b/README
@@ -81,6 +81,9 @@ To make a Javarifier distribution:
       # (but maybe use a different checkers.zip URL, such as one of:
       #   wget http://www.cs.washington.edu/homes/mernst/jsr308test/checker-framework/current/checkers.zip
       #   cp -pf /home/cf/jsr308/checker-framework/tmp/1.1.1/checkers.zip .
+      # ).
+      # Sanity-check by following instructions at
+      # http://types.cs.washington.edu/checker-framework/#example-use
 
       ## Install Annotation File Utilities
       cd ~/jsr308
@@ -89,7 +92,8 @@ To make a Javarifier distribution:
       rm -rf annotation-tools
       unzip annotation-tools.zip
 
-      ## Install Javarifier
+      ## Install Javarifier (these commands implement the instructions at
+      # http://types.cs.washington.edu/javari/javarifier/#installation):
       cd ~/jsr308
       # For unreleased version: cp -pf ~cf/jsr308/javarifier/javarifier.zip .
       wget http://types.cs.washington.edu/javari/javarifier/javarifier.zip
@@ -98,6 +102,9 @@ To make a Javarifier distribution:
       # Shouldn't have to add javarifier/scripts directory to my path.
       cd javarifier
       ant run-tests
+
+ 6. Tag the release, for example:
+      hg tag 0.1.4
 
 
 JAVARIFIER DOCUMENTATION
