--- a/README
+++ b/README
@@ -66,6 +66,7 @@ CREATING A DISTRIBUTION
 =======================
 
 To make a Javarifier distribution:
+ 0. Run these instructions in an account that uses JDK 6, not JDK 7.
  1. Run 'ant -e zipfile' to ensure that you can build javarifier.zip.
  2. Manually verify that the release notes at the end of javarifier.html
     are up-to-date.
