--- a/README
+++ b/README
@@ -36,7 +36,7 @@ Projects to build Javarifier:
       polyglotclasses-1.3.2.jar
 - "annotations-compiler", the extended annotations compiler.
 - "javari-annotated-jdk", a set of Javari pre-annotated builtin JDK classes.
-- "checkers", the checkers framework (which contains the Javari qualifiers)
+- "checkers", the Checker Framework (which contains the Javari qualifiers)
 - "jdk1.6.0", a directory containing an installation of a 1.6.0 JDK, which
   should most likely be the JSR 308 distribution, since it is fully
   backwards compatible.
@@ -66,7 +66,7 @@ CREATING A DISTRIBUTION
 =======================
 
 To make a Javarifier distribution:
- 0. Run these instructions in an account that uses JDK 6, not JDK 7.
+ 0. Run these instructions in an account that uses JDK 7, not JDK 8.
  1. Run 'ant -e zipfile' to ensure that you can build javarifier.zip.
  2. Manually verify that the release notes at the end of javarifier.html
     are up-to-date.
